2012-04-14 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #36051: RegHash not cleared if link results in auto-login
	* Change order of extension dependencies (rsaauth before saltedpasswords)
	* Update extensions dependencies, require TYPO3 4.4
	* Update manual
	* Add feature #36089: Issue error message if html template contains deprecated marker
	* Fix bug #36091: setEmptyIfAbsent may not work if field is not numeric

2012-04-13 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 10 to feature #34447: Upgrade markers only for extension sr_feuser_register
	* Update manual: Remove references to simulateStaticDocuments
	* Add feature #36006: Honour tt_address extension configuration settings
	* Follow-up feature #36006: Fix $GLOBALS['TCA']['tt_address']['feInterface']['fe_admin_fieldList']
	* Cleanup identity checks

2012-04-12 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #35910: Messages regarding installation problems are not localized
	* Follow-up to bug #35910: Messages regarding installation problems are not localized
	* Cleanup: Remove unnecessary check for div2007 in tx_srfeuserregister_email
	* Fix bug #35926: Checkbox cannot be unset when preview is used
	* Fix bug #9542 (old bug tracker): Required for checkbox doesn't work
	* Fix bug #8432 (old bug tracker): Required checkbox of extended fe_user table is not required when registering in the FE
	* Add feature #35931: Allow to show terms of usage on page or url
	* Add feature #15100 (old bug tracker): How to include terms of use in registration form
	* Add feature #18009 (old bug tracker): Add module_sys_dmail_newsletter to tx_srfeuserregister_pi1_css_tmpl.html (Thanks to Tobias Schaefer)
	* Fix bug #11529 (old bug tracker): tx_srfeuserregister_control_main::init has wrong PhpDoc comment
	* Follow-up to feature #35883: Always use flexforms

2012-04-11 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 4 to feature #35805: Display message in frontend if required extension is not loaded